[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/ui/sfxtest.gd" type="Script" id=1]
[ext_resource path="res://fonts/start.tres" type="DynamicFont" id=2]
[ext_resource path="res://backgounds/night-sky-at-ceres.jpg" type="Texture" id=3]
[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Sfxtest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Night Sky" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )

[node name="Game name" type="Label" parent="."]
margin_top = 3.0
margin_right = 1280.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "MENU_SFXTEST"
align = 1
valign = 1

[node name="Bottomhud" parent="." instance=ExtResource( 4 )]

[node name="BoxContainer" type="HBoxContainer" parent="."]
margin_left = 640.0
margin_top = 301.0
margin_right = 1089.0
margin_bottom = 413.0

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
margin_right = 241.0
margin_bottom = 112.0

[node name="Game Over" type="Button" parent="BoxContainer/VBoxContainer"]
margin_right = 241.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Game Over"

[node name="Gauge Fill" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 241.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 2 )
text = "Gauge Fill"

[node name="VBoxContainer2" type="VBoxContainer" parent="BoxContainer"]
margin_left = 245.0
margin_right = 605.0
margin_bottom = 112.0

[node name="Explosion" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_right = 360.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Explosion"

[node name="Back" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 58.0
margin_right = 360.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "BUTTON_RETURN"

[connection signal="pressed" from="BoxContainer/VBoxContainer/Game Over" to="." method="_on_game_over_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Gauge Fill" to="." method="_on_gauge_fill_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Explosion" to="." method="_on_explosion_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Back" to="." method="_on_back_pressed"]
